[project]
name = "xa_hub_user_scrapper"
version = "0.1.0"
description = "Retrieves all members from XA Hub's Roblox hacking group"
authors = [
    {name = "sRedRubyyy611"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.11.1,<3.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
[tool.poetry.group.lint]
[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
codespell = "^2.4.1"
types-requests = "^2.32.0.20250328"
