[project]
name = "xa_hub_user_scraper"
version = "0.1.0"
description = "Retrieves members from Roblox hacking groups"
authors = [
    {name = "sRedRubyyy611"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
]
package-mode = false

[tool.codespell]
skip = '*.txt,*.json'

[tool.taskipy.tasks]
lint = "black . && isort --profile=black . && codespell ."
scrape-xa = "python scraper.py --scrape --groups xa_hub"
extract-xa = "python scraper.py --extract --groups xa_hub"
scrape-extract = "python scraper.py --scrape --extract --groups xa_hub"
scrape-xpp = "python scraper.py --scrape --groups xpp"
extract-xpp = "python scraper.py --extract --groups xpp"
scrape-extract-xpp = "python scraper.py --scrape --extract --groups xpp"
scrape-all = "python scraper.py --scrape --groups xa_hub xpp"
extract-all = "python scraper.py --extract --groups xa_hub xpp"
scrape-extract-all = "python scraper.py --scrape --extract --groups xa_hub xpp"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
[tool.poetry.group.lint]
[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
codespell = "^2.4.1"
types-requests = "^2.32.0.20250328"
